--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
     <section class="row margin-block">
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
@@ -184,7 +184,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
@@ -213,7 +213,7 @@
     </div>
     <section class="row margin-block">
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
                 </a>
@@ -224,7 +224,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 w-100 shadow-box">
                 <a href="product-detail.html">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
                 </a>
@@ -235,7 +235,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 w-100 shadow-box">
                 <a href="#">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
                 </a>
@@ -246,7 +246,7 @@
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box" style="width: 100%">
                 <a href="#">
                     <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
                 </a>
