--- a/product-detail.html
+++ b/product-detail.html
@@ -134,7 +134,7 @@
     </nav>
     <div class="row">
         <div class="col-xs-12 col-md-5">
-            <div class="card">
+            <div class="card border-0">
                 <!--<div class="card-body">-->
                     <a href="#">
                         <img src="img/Husbands_Birthday_Greeting__Card_89070890010139_1_ed4ce5ec.jpg" alt="merychrismas" class="w-100">
