--- a/products.html
+++ b/products.html
@@ -199,9 +199,9 @@
         </ol>
     </nav>
     <div class="row">
-        <form class="form-inline ml-3">
+        <form class="ml-3">
             <div class="form-row">
-                <div class="form-group">
+                <div class="form-group col-3">
                     <select class="form-control">
                         <option selected disabled>Brands</option>
                         <option value="1">Archies</option>
@@ -213,7 +213,7 @@
                         <option value="7">Cardstore</option>
                     </select>
                 </div>
-                <div class="form-group ml-2">
+                <div class="form-group col-3">
                     <select class="form-control">
                         <option selected disabled>Occations</option>
                         <option value="1">Birthday</option>
@@ -224,69 +224,66 @@
                         <option value="6">Any time</option>
                     </select>
                 </div>
-                <div class="form-group ml-2">
-                    <div class="form-inline">
-                        <input type="text" class="form-control" placeholder="Card's name">
-                    </div>
-
+                <div class="form-group col">
+                    <input type="text" class="form-control" placeholder="Card's name">
                 </div>
-
-                    <button type="button" class="btn btn-outline-info ml-2">Go <i class="fa fa-search"></i></button>
-
+                <div class="form-group col">
+                    <button type="button" class="btn btn-outline-info ml-2">Go</button>
+                </div>
             </div>
         </form>
     </div>
     <div class="row">
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box">
                 <a data-toggle="modal" href="#modal-product-detail">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
-                <div class="card-body text-center">
+                <div class="text-center">
                     <h5 class="card-title">Trust dream card</h5>
                     <p>$.100</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box">
                 <a data-toggle="modal" href="#modal-product-detail">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
-                <div class="card-body text-center">
+                <div class="text-center">
                     <h5 class="card-title">Trust dream card</h5>
                     <p>$.100</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box">
                 <a data-toggle="modal" href="#modal-product-detail">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
-                <div class="card-body text-center">
+                <div class="text-center">
                     <h5 class="card-title">Trust dream card</h5>
                     <p>$.100</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box">
                 <a data-toggle="modal" href="#modal-product-detail">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
-                <div class="card-body text-center">
+                <div class="text-center">
                     <h5 class="card-title">Trust dream card</h5>
                     <p>$.100</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card" style="width: 100%">
+            <div class="card border-0 shadow-box">
                 <a data-toggle="modal" href="#modal-product-detail">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                    <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
                 </a>
-                <div class="card-body text-center">
+                <div class="text-center">
                     <h5 class="card-title">Trust dream card</h5>
                     <p>$.100</p>
                 </div>
