--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <div class="float-right">
                     <a class="text-white" href="#">Order Status</a>
                     |
-                    <a href="#" class="text-white" data-toggle="modal" data-target="#login-modal">Login</a>
+                    <a href="#login-modal" class="text-white" data-toggle="modal">Login</a>
                     /
-                    <a href="#" class="text-white">Register</a>
+                    <a href="#register/" class="text-white">Register</a>
                 </div>
             </div>
         </div>
@@ -49,13 +49,13 @@
                             <i class="fa fa-leaf"></i> Brands
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="products.html">Archies</a>
-                            <a class="dropdown-item" href="products.html">Hallmark</a>
-                            <a class="dropdown-item" href="products.html">Blue Mountain</a>
-                            <a class="dropdown-item" href="products.html">American Greetings</a>
-                            <a class="dropdown-item" href="products.html">Galison</a>
-                            <a class="dropdown-item" href="products.html">Moo</a>
-                            <a class="dropdown-item" href="products.html">Cardstore</a>
+                            <a class="dropdown-item" href="#products/">Archies</a>
+                            <a class="dropdown-item" href="#products/">Hallmark</a>
+                            <a class="dropdown-item" href="#products/">Blue Mountain</a>
+                            <a class="dropdown-item" href="#products/">American Greetings</a>
+                            <a class="dropdown-item" href="#products/">Galison</a>
+                            <a class="dropdown-item" href="#products/">Moo</a>
+                            <a class="dropdown-item" href="#products/">Cardstore</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -63,13 +63,13 @@
                             <i class="fa fa-birthday-cake"></i> Occations
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="products.html">Birthday</a>
-                            <a class="dropdown-item" href="products.html">Seasonal</a>
-                            <a class="dropdown-item" href="products.html">Graduation</a>
-                            <a class="dropdown-item" href="products.html">Wedding</a>
-                            <a class="dropdown-item" href="products.html">Party</a>
+                            <a class="dropdown-item" href="#products/">Birthday</a>
+                            <a class="dropdown-item" href="#products/">Seasonal</a>
+                            <a class="dropdown-item" href="#products/">Graduation</a>
+                            <a class="dropdown-item" href="#products/">Wedding</a>
+                            <a class="dropdown-item" href="#products/">Party</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="products.html">Any time</a>
+                            <a class="dropdown-item" href="#products/">Any time</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -122,141 +122,8 @@
     </div>
 </section>
 
-<main class="container">
-    <!-- Bread Crumb -->
-    <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">Home</li>
-        </ol>
-    </nav>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="https://www.archiesonline.com/upload/home_banner_7a622596-baef-49dc-8f52-f511829397bd.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://www.archiesonline.com/upload/home_banner_7a622596-baef-49dc-8f52-f511829397bd.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://www.archiesonline.com/upload/home_banner_7a622596-baef-49dc-8f52-f511829397bd.jpg" alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div class="row justify-content-center margin-block">
-        <div class="col-6">
-            <button type="button" class="btn btn-danger btn-lg btn-block" disabled>The hot Sellers</button>
-        </div>
+<main class="container" id="red-cards-view">
 
-    </div>
-    <div class="label-of-row">
-        Love Cards
-        <a href="#">View all <i class="fa fa-chevron-right"></i></a>
-    </div>
-    <section class="row margin-block">
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="label-of-row">
-        Birthday Cards
-        <a href="#">View all <i class="fa fa-chevron-right"></i></a>
-    </div>
-    <section class="row margin-block">
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 w-100 shadow-box">
-                <a href="product-detail.html">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 w-100 shadow-box">
-                <a href="#">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-6 margin-block">
-            <div class="card border-0 shadow-box" style="width: 100%">
-                <a href="#">
-                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
-                </a>
-                <div class="card-body text-center">
-                    <h5 class="card-title">Trust dream card</h5>
-                    <p>$.100</p>
-                </div>
-            </div>
-        </div>
-    </section>
 </main>
 
 <footer style="margin-top: 30px">
@@ -333,5 +200,6 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
