update cart, contact

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-phone"></i> Contact</a>
+                        <a class="nav-link" href="#contact/"><i class="fa fa-phone"></i> Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#cart/"><i class="fa fa-shopping-cart"></i> Cart</a>
                     </li>
                 </ul>
                 <form class="form-inline">
@@ -122,9 +125,9 @@
     </div>
 </section>
 
-<main class="container" id="red-cards-view">
+<div id="red-cards-view">
 
-</main>
+</div>
 
 <footer style="margin-top: 30px">
     <div class="footer" id="footer">
