--- a/pages/products.html
+++ b/pages/products.html
@@ -1,104 +1,3 @@
-<!-- Bread Crumb -->
-<nav aria-label="breadcrumb" role="navigation">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Happy Birthday</li>
-    </ol>
-</nav>
-<div class="row">
-    <form class="ml-3">
-        <div class="form-row">
-            <div class="form-group col-3">
-                <select class="form-control">
-                    <option selected disabled>Brands</option>
-                    <option value="1">Archies</option>
-                    <option value="2">Hallmark</option>
-                    <option value="3">Blue Mountain</option>
-                    <option value="4">American Greetings</option>
-                    <option value="5">Galison</option>
-                    <option value="6">Moo</option>
-                    <option value="7">Cardstore</option>
-                </select>
-            </div>
-            <div class="form-group col-3">
-                <select class="form-control">
-                    <option selected disabled>Occations</option>
-                    <option value="1">Birthday</option>
-                    <option value="2">Seasonal</option>
-                    <option value="3">Graduation</option>
-                    <option value="4">Wedding</option>
-                    <option value="5">Party</option>
-                    <option value="6">Any time</option>
-                </select>
-            </div>
-            <div class="form-group col">
-                <input type="text" class="form-control" placeholder="Card's name">
-            </div>
-            <div class="form-group col">
-                <button type="button" class="btn btn-outline-info ml-2">Go</button>
-            </div>
-        </div>
-    </form>
-</div>
-<div class="row">
-    <div class="col-md-3 col-sm-6 col-6 margin-block">
-        <div class="card border-0 shadow-box">
-            <a data-toggle="modal" href="#modal-product-detail">
-                <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-            </a>
-            <div class="text-center">
-                <h5 class="card-title">Trust dream card</h5>
-                <p>$.100</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6 col-6 margin-block">
-        <div class="card border-0 shadow-box">
-            <a data-toggle="modal" href="#modal-product-detail">
-                <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-            </a>
-            <div class="text-center">
-                <h5 class="card-title">Trust dream card</h5>
-                <p>$.100</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6 col-6 margin-block">
-        <div class="card border-0 shadow-box">
-            <a data-toggle="modal" href="#modal-product-detail">
-                <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-            </a>
-            <div class="text-center">
-                <h5 class="card-title">Trust dream card</h5>
-                <p>$.100</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6 col-6 margin-block">
-        <div class="card border-0 shadow-box">
-            <a data-toggle="modal" href="#modal-product-detail">
-                <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-            </a>
-            <div class="text-center">
-                <h5 class="card-title">Trust dream card</h5>
-                <p>$.100</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-3 col-sm-6 col-6 margin-block">
-        <div class="card border-0 shadow-box">
-            <a data-toggle="modal" href="#modal-product-detail">
-                <img class="w-100" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
-            </a>
-            <div class="text-center">
-                <h5 class="card-title">Trust dream card</h5>
-                <p>$.100</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 <!-- /modal -->
 <section class="modal fade bd-example-modal-lg" id="modal-product-detail" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -167,3 +66,164 @@
     </div>
 </section>
 <!-- /modal -->
+<main class="container">
+    <!-- Bread Crumb -->
+    <nav aria-label="breadcrumb" role="navigation">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Happy Birthday</li>
+        </ol>
+    </nav>
+    <div class="row">
+        <form class="form-inline ml-3">
+            <div class="form-row">
+                <div class="form-group">
+                    <select class="form-control">
+                        <option selected disabled>Brands</option>
+                        <option value="1">Archies</option>
+                        <option value="2">Hallmark</option>
+                        <option value="3">Blue Mountain</option>
+                        <option value="4">American Greetings</option>
+                        <option value="5">Galison</option>
+                        <option value="6">Moo</option>
+                        <option value="7">Cardstore</option>
+                    </select>
+                </div>
+                <div class="form-group ml-2">
+                    <select class="form-control">
+                        <option selected disabled>Occations</option>
+                        <option value="1">Birthday</option>
+                        <option value="2">Seasonal</option>
+                        <option value="3">Graduation</option>
+                        <option value="4">Wedding</option>
+                        <option value="5">Party</option>
+                        <option value="6">Any time</option>
+                    </select>
+                </div>
+                <div class="form-group ml-2">
+                    <div class="form-inline">
+                        <input type="text" class="form-control" placeholder="Card's name">
+                    </div>
+
+                </div>
+
+                <button type="button" class="btn btn-outline-info ml-2">Go <i class="fa fa-search"></i></button>
+
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Brothers_Birthday_Greeting_Card_8907089101425_65656348.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-lg-3 margin-block add-cart-tag-control">
+            <div class="card border-0 w-100">
+                <a data-target="#modal-product-detail" data-toggle="modal" class="hover-pointer">
+                    <img class="card-img-top" src="https://www.archiesonline.com/upload/product/large/Trust_Dreams_Luck_Card_GLK00238_cd2e5879.jpg" alt="Card image cap">
+                </a>
+                <div class="card-body text-center">
+                    <h5 class="card-title">Trust dream card</h5>
+                    <p>$.100</p>
+                </div>
+            </div>
+            <div class="text-white text-center add-cart-tag">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
+            </div>
+        </div>
+    </div>
+</main>
