--- a/pages/register.html
+++ b/pages/register.html
@@ -84,3 +84,11 @@
         </div>
     </div>
 </main>
+<link rel="stylesheet" href="css/gijgo.min.css">
+<script src="js/gijgo.min.js"></script>
+<script>
+    $("#datepicker").datepicker({
+        uiLibrary: 'bootstrap4',
+        iconsLibrary: 'fontawesome'
+    })
+</script>
