--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -5,7 +5,36 @@
             <li class="breadcrumb-item active" aria-current="page">Shopping cart</li>
         </ol>
     </nav>
+    <section class="row bs-wizard border-bottom-0">
+        <div class="col-4 col-lg-3 bs-wizard-step complete">
+            <div class="text-center bs-wizard-stepnum"><i class="fa fa-shopping-cart fa-fw"></i></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+            <div class="bs-wizard-info text-center">
+                Shopping Cart
+            </div>
+        </div>
+
+        <div class="col-4 col-lg-3 bs-wizard-step complete"><!-- complete -->
+            <div class="text-center bs-wizard-stepnum"><i class="fa fa-map-marker fa-fw"></i></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+            <div class="bs-wizard-info text-center">
+                Delivery
+            </div>
+        </div>
+
+        <div class="col-4 col-lg-3 bs-wizard-step active"><!-- complete -->
+            <div class="text-center bs-wizard-stepnum"><i class="fa fa-fw fa-cc-mastercard"></i></div>
+            <div class="progress"><div class="progress-bar"></div></div>
+            <a href="#" class="bs-wizard-dot"></a>
+            <div class="bs-wizard-info text-center">
+                Payment
+            </div>
+        </div>
+    </section>
     <section class="row">
+
         <div class="col-lg-9">
             <div class="card-header">
                 Shopping cart
@@ -103,7 +132,7 @@
 
 
         <div class="col-lg-3">
-            <nav class="navbar sticky-top navbar-light bg-light">
+            <nav class="navbar sticky-top navbar-light bg-light" style="top: 70px">
                 <div class="row">
                     <div class="col-md-4">
                         <em class="mr-2">TOTAL($)</em>
