--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <title>Hello, world!</title>
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6">
                     <h3> About Us </h3>
-                    <
+                    <p>abc</p>
                     <p>blood type: B</p>
                 </div>
                 <div class="col-lg-3 col-md-3">
