--- a/pages/products.html
+++ b/pages/products.html
@@ -224,6 +224,28 @@
             <div class="text-white text-center add-cart-tag">
                 <i class="fa fa-cart-plus" aria-hidden="true"></i> Add to Cart
             </div>
+            <nav aria-label="..." style="padding-top: 30px;">
+                <ul class="pagination justify-content-end">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="">Previous</a>
+                    </li>
+                    <li class="page-item active">
+                        <span class="page-link">1<span class="sr-only">(current)</span>
+                        </span>
+                    </li>
+                    <li class="page-item">
+                        <span class="page-link">2<span class="sr-only">(current)</span>
+                        </span>
+                    </li>
+                    <li class="page-item">
+                        <span class="page-link">3<span class="sr-only">(current)</span>
+                        </span>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="">Next</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </main>
