--- a/shoppingCart-update.html
+++ b/shoppingCart-update.html
@@ -83,7 +83,7 @@
                             </label>
                         </td>
                         <td><a href="#productDetail/" target="_blank">HUSBAND`S BIRTHDAY GREETING CARD</a></td>
-                        <td><input style="width: 50%" value="1" type="text" class="form-control"></td>
+                        <td><input style="width: 70%" value="1" type="number" min="1" class="form-control"></td>
                         <td>$</td>
                         <td>$</td>
                         <td>$</td>
@@ -97,7 +97,7 @@
                             </label>
                         </td>
                         <td><a href="#productDetail/" target="_blank">HUSBAND`S BIRTHDAY GREETING CARD</a></td>
-                        <td><input style="width: 50%" value="1" type="text" class="form-control"></td>
+                        <td><input style="width: 70%" value="1" type="number" min="1" class="form-control"></td>
                         <td>$</td>
                         <td>$</td>
                         <td>$</td>
@@ -111,7 +111,7 @@
                             </label>
                         </td>
                         <td><a href="#productDetail/" target="_blank">HUSBAND`S BIRTHDAY GREETING CARD</a></td>
-                        <td><input style="width: 50%" value="1" type="text" class="form-control"></td>
+                        <td><input style="width: 70%" value="1" type="number" min="1" class="form-control"></td>
                         <td>$</td>
                         <td>$</td>
                         <td>$</td>
