--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -218,7 +218,7 @@
                    </div>
                 </div>
                    <div class="col-sm-3">
-                    <button type="button" onclick="placeorder()" class="btn btn-warning btn-lg btn-block" style="cursor:pointer;">Place Order</button>
+                    <button type="button" data-toggle="modal" data-target="#confirm-alert" class="btn btn-warning btn-lg btn-block" style="cursor:pointer;">Place Order</button>
                    </div>
                    <div class="col-sm-4"><h6><em>or go back to change</em></h6></div>
                 </div>
@@ -234,7 +234,13 @@
                 </nav>
             </div>
       </div>
-	
+	<section class="modal fade" id="confirm-alert" tabindex="-1" role="dialog" aria-hidden="true">
+	  <br><div class="modal-dialog"> 
+	        <div class="alert alert-success">
+		   <h4 class="alert-heading text-center">Place order successfully!</h4>
+		</div>
+	      </div>
+	</section>
     
     </div>   
 </main>
