--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -237,7 +237,7 @@
 	<section class="modal fade" id="confirm-alert" tabindex="-1" role="dialog" aria-hidden="true">
 	  <br><div class="modal-dialog"> 
 	        <div class="alert alert-success">
-		   <h4 class="alert-heading text-center">Place order successfully!</h4>
+		   <h4 class="alert-heading text-center">Place order successfully ^o^</h4>
 		</div>
 	      </div>
 	</section>
