--- a/pages/products.html
+++ b/pages/products.html
@@ -55,7 +55,7 @@
                             <i class="fa fa-cart-plus"></i>
                             Add to Cart
                         </button>
-                        <a href="#productD" class="btn btn-outline-success">
+                        <a href="#productDetail/" class="btn btn-outline-success">
                             <i class="fa fa-info"></i>
                             Full Detail
                         </a>
