update social footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cssfooter.css">
 </head>
 <body>
 <section class="bg-danger">
@@ -161,11 +162,12 @@
                         </li>
                     </ul>
                     <ul class="social">
-                        <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                        <li id="goole-plus"> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
+                        <li id="facebook"> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
+                        <li id="pinterest"> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
+                        <li id="twitter"> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
+                        <li id="youtube"> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+                        <li> <a href="#"> <i class="fa fa-instagram">   </i> </a> </li>
                     </ul>
                 </div>
             </div>
